# opencv_dotnetcore

./: .gitignore  README.md
cpp_warpper/: CMakeLists.txt  common.h  core.cpp  core.hpp  highgui.cpp  highgui.hpp  imgproc.cpp  imgproc.hpp
dotnet/: CoreRoutine.cs  GenericArithmetic.cs  GenericConverter.cs  HighguiRoutine.cs  ImgprocRoutine.CvtColorCode.cs  ImgprocRoutine.cs  Mat.cs  Platform.cs  Point.cs  Rect.cs  Size.cs  opencv_dotnetcore.csproj
